--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,41 @@
     "files.associations": {
         "iostream": "cpp",
         "system_error": "cpp",
-        "*.ipp": "cpp"
+        "*.ipp": "cpp",
+        "cctype": "cpp",
+        "clocale": "cpp",
+        "cmath": "cpp",
+        "csignal": "cpp",
+        "cstdarg": "cpp",
+        "cstddef": "cpp",
+        "cstdio": "cpp",
+        "cstdlib": "cpp",
+        "cstring": "cpp",
+        "ctime": "cpp",
+        "cwchar": "cpp",
+        "cwctype": "cpp",
+        "*.tcc": "cpp",
+        "codecvt": "cpp",
+        "cstdint": "cpp",
+        "algorithm": "cpp",
+        "chrono": "cpp",
+        "filesystem": "cpp",
+        "string_view": "cpp",
+        "type_traits": "cpp",
+        "iosfwd": "cpp",
+        "array": "cpp",
+        "atomic": "cpp",
+        "condition_variable": "cpp",
+        "exception": "cpp",
+        "initializer_list": "cpp",
+        "limits": "cpp",
+        "memory": "cpp",
+        "mutex": "cpp",
+        "ratio": "cpp",
+        "stdexcept": "cpp",
+        "thread": "cpp",
+        "tuple": "cpp",
+        "typeinfo": "cpp",
+        "utility": "cpp"
     }
 }
