generating AND loading of levels done
implemented:
generating level
loading level
new perlin noise generator

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,6 +39,14 @@
         "typeinfo": "cpp",
         "utility": "cpp",
         "istream": "cpp",
-        "bitset": "cpp"
+        "bitset": "cpp",
+        "fstream": "cpp",
+        "functional": "cpp",
+        "new": "cpp",
+        "numeric": "cpp",
+        "optional": "cpp",
+        "ostream": "cpp",
+        "sstream": "cpp",
+        "streambuf": "cpp"
     }
 }
